modified:   engineering.html

--- a/engineering.html
+++ b/engineering.html
@@ -8,7 +8,13 @@
 	<link rel="stylesheet" type="text/css" href="css/nav.css">
 	<link rel="stylesheet" type="text/css" href="css/engineer/engineer-pg.css">
 	<script src="js/Nav_Handler.js"></script>
-	
+	<style>
+		.page{
+			display: grid;
+				grid-template-columns: fr fr;
+  				grid-template-rows: fr fr;
+		}
+	</style>
 </head>
 	 
 <body onload="init()">
@@ -32,6 +38,7 @@
     </nav> 
     <div class="page">
 		<h1>Welcome to the Engineering Dept page</h1>
+		<label>Manager's<br>Packet</label>
 		<label>Tutorial</label>
     </div>
 
