--- a/ceo.html
+++ b/ceo.html
@@ -14,31 +14,42 @@
 	</script>
 
 	<style>
-	/*	.page{
-			border: 1px solid red;
-			height: 95vh; 
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-content: center;
-		}*/
-
+		
 		h1{
 			position: absolute;
-			top: 1em;
+			top: 0.5em;
 			left: calc(50% - 5em);
 			color: khaki;
 			margin: auto;
-			z-index: 10;
-		} 
-
-		.ceo-intro{
-			width: 75%;
-			font-size: 1.5em;
-			font-weight: bold;
-			margin: auto;
-		/*	padding: 0 10%;*/
+		/*	z-index: 10; */
 		}
+
+		.ceo-contents{
+			display: grid;
+			grid-template-columns: 1fr 1fr 1fr;
+			grid-template-areas: "proposal packet resources";
+		}
+
+			.ceo-ele{
+				color: white;
+				font-size: 2.5em;
+				font-weight: bold;
+				margin: auto;
+				padding: 0 10%;
+				cursor: pointer;
+			}
+
+			.ceo-proposal{
+				grid-area: proposal;
+			}
+
+			.ceo-packet{
+				grid-area: packet;
+			}
+
+			.ceo-resources{
+				grid-area: resources;
+			}
 
 	</style>
 
@@ -66,10 +77,10 @@
 
 	<div class="page">
 		<h1>Welcome to the CEO page</h1>
-		<div>
-			<label class="ceo-intro">My name is Bob Englert.</label>
-			<p class="ceo-intro">I am the CEO of DB&E Inc. DB&E stands for Design, Build and Educate, which embodies the Company's very essence. </p>
-			<p class="ceo-intro">As you may know, last year (1970) Texas Instruments (TI) introduced the 74-- series of integrated circuits (IC's). We believe that these chips will allow us the opportunity to build a functional 8-bit Computer. While it will be somewhat limited in capability, future IC's with enhanced capability, will most assuredly open the door to more powerful computers. It would not be surprizing if these future machines become an integral part of our very personal lives!</p>
+		<div class="ceo-contents">
+			<label class="ceo-ele ceo-proposal">Proposal</label>
+			<label class="ceo-ele ceo-packet">CEO's<br>Packet</label>
+			<label class="ceo-ele ceo-resources">Resources</label>
 	    </div>
 	</div>
 
