modified:   ceo.html 	deleted:    ceo_original.html 	modified:   computer.html 	modified:   drafting.html 	modified:   education.html 	modified:   engineering.html 	deleted:    html/CEO/CEO_Packet_rev-1.html 	deleted:    html/CEO/Proposal-rev-1.html 	new file:   html/Computer/Computer_Packet.html 	renamed:    html/Edu-Media/Edu-Media_Packet.html -> html/Computer/Programming.html 	new file:   html/Computer/Resources.html 	new file:   html/Drafting/Draft.html 	new file:   html/Drafting/Drafting_Packet.html 	new file:   html/Drafting/Resources.html 	new file:   html/Education/Resources.html 	new file:   html/Education/Training.html 	new file:   html/Engineering/Design.html 	new file:   html/Engineering/Engineering_Packet.html 	new file:   html/Engineering/Resources.html 	new file:   html/Media/Create.html 	new file:   html/Media/Media_Packet.html 	new file:   html/Media/Resources.html 	new file:   html/Technician/Build.html 	new file:   html/Technician/Resources.html 	new file:   html/Technician/Technician_Packet.html 	modified:   js/HTML_Manager.js 	modified:   media.html 	modified:   technician.html

--- a/drafting.html
+++ b/drafting.html
@@ -3,12 +3,136 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Drafting Department</title>
+	<title>Drafting Dept</title>
 
 	<link rel="stylesheet" type="text/css" href="css/nav.css">
-	<link rel="stylesheet" type="text/css" href="css/drafting/drafting-pg.css">
+	<link rel="stylesheet" type="text/css" href="css/education/education-pg.css">
 	<script src="js/Nav_Handler.js"></script>
+	<script src="js/HTML_Manager.js"></script>
 
+	<style>
+
+		#list-img-id{
+			list-style-image: url("media/imgs/alpha.png");
+		}
+
+		.list-size{
+			font-size: 1.5em;
+		}
+	
+
+		.transition-fade-in{ 
+			transition: opacity 0.5s;
+		}
+
+	/*	.span-spacer{
+			visibility: hidden;
+		} */
+		
+	/* 	.dept-label{
+			font-size: 2em;
+			font-weight: bold;
+		 margin-left: 0.2vw;
+		} */
+	/*	.a-little-history-label{
+			font-size: 1.5em;
+			font-weight: bold;
+		} */
+
+		.dept-contents{
+			display: grid;
+			/*grid-template-columns: 1fr 1fr 1fr;*/
+			grid-template-columns: 33% 33% 33%; 
+			grid-template-areas: "training packet resources";
+			width: 95vw;
+		}
+
+			.dept-label{
+				color: white;
+				font-size: 2.5em;
+				font-weight: bold;
+				margin: auto;
+				padding: 0 10%;
+				cursor: pointer;
+			}
+
+			.dept-training-label{
+				grid-area: training;
+			}
+			.dept-training-label:hover{
+				color: yellow;
+			}
+
+			.dept-packet-label{
+				grid-area: packet;
+			}
+			.dept-packet-label:hover{
+				color: yellow;
+			}
+
+			.dept-resources-label{
+				grid-area: resources;
+			}
+			.dept-resources-label:hover{
+				color: yellow;
+			}
+
+			.dept-welcome-label{
+				position: absolute;
+				top: 0.5em;
+				left: calc(50% - 5em); 
+				color: yellow;
+				/*margin: auto;*/
+			/*	z-index: 10; */
+			}
+
+		.dept-html{
+			position: absolute;
+			top: 0.5em; 
+			left: 25%;
+			width: 50%;
+			height: 95vh;
+			opacity: 0;
+			z-index: -10;
+			transition: opacity 1s;
+			color: yellow;
+			background-image: radial-gradient(blue, black);
+		/*background-color: #2196F3; */
+			border: 2px solid yellow;
+			border-radius: 10px;
+			padding: 0 1em;
+			overflow-y: scroll; 
+			/*z-index: 10; */
+		}
+		.close-dept-html{
+			position:absolute;
+			top: 0;
+			right: 0.5em; 
+			margin-left: 95%;
+			cursor: pointer;
+			color: black;
+			border: 1px solid red; 
+			border-radius: 5px;
+			background-color: red;
+			padding: 0 0.2em;
+			font-size: 1.5em;
+		}
+
+		.close-dept-html:hover{
+			font-size: 1.6em;
+			font-weight: bold;
+		}
+
+		
+
+		/* CSS for Training */
+			.training{
+				font-size: 1.5em;
+			}
+
+	/* End CSS for Training */ 
+	</style>
+	
 </head>
 <body onload="init()">
 
@@ -29,11 +153,19 @@
 			</div>
 		</div>
     <!--    <div id="nav-bottom-id"></div>  -->
-    </nav>  
+    </nav> 
+
 
 	<div class="page">
-		<h1>Welcome to the Drafting Department page</h1>
-    </div>
+		<h1 class="dept-welcome-label">Welcome to the Drafting page</h1>
+		<div class="dept-contents">
+			<label class="dept-label dept-training-label"  onclick="HTML_Manager.load('html/Drafting/Draft.html')">Draft</label>
+			<label class="dept-label dept-packet-label" onclick="HTML_Manager.load('html/Drafting/Drafting_Packet.html')">Drafting<br>Packet</label>
+			<label class="dept-label dept-resources-label" onclick="HTML_Manager.load('html/Drafting/Resources.html')">Resources</label>
+	    </div>
+		<article id="html-target-id" class="dept-html">
+		</article>
+	</div>
 
 
 
@@ -41,8 +173,8 @@
     	function init(){
     		// initialize
     		NavHandler.init();
+			HTML_Manager.init();
     	}
     </script>
-
 </body>
 </html>
