--- a/html/Computer/Resources.html
+++ b/html/Computer/Resources.html
@@ -1,19 +1,19 @@
-<div class="close-ceo-html" onclick="HTML_Manager.close()">Close</div>
-<label class="ceo-proposal-label"><span class="span-spacer">................................</span></span>Education/Media Packet<br></label>
+<label class="close-dept-html" onclick="HTML_Manager.close()">Close</label>
+<label class="dept-label">Education Resources<br></label>
 
-<ol type=”I”>
+<ol type="I" class="list-size">
     <li>Responsibilities:
         <ol type="A">
             <li>Training:
-                <ol type=”1”>
+                <ol type="1">
                     <li>Initial training:
-                        <ol type=”a”>
+                        <ol type="a">
                             <li>Architecture
                                 <ol type="i">
                                     <li>Software</li>
                                     <li>Hardware:
                                         <ol>
-                                            <li><img src="media/imgs/alpa.png"</li>
+                                            <li id="list-img-id">????</li>
                                             <li>74LS-- ICs</li>
                                             <li>Nomenclature</li>
                                         </ol>
@@ -29,7 +29,7 @@
         </ol>
     </li>        
     <li>Additional thoughts, suggestions, considerations etc.as to the Order of Business
-        <ol type=”A”>
+        <ol type="A">
             <li>Design then Draft then Build</li>
             <li>Design and Draft will go through several(many) revisions</li>
             <li>The most tedious and time consuming process is the actual wiring in the Build process</li>
@@ -41,7 +41,7 @@
     </li>
 </ol>
     <li>Nomenclature:
-        <ol type=”A”>
+        <ol type="A">
             <li>A problem that has no perfect solution:</li>
             <li>Given: Five elements all labeled with "A" which is followed by a "#" indicating which element it is.</li>
             <li>Question: For element "A5" Is "A5" the fifth element of the group?</li>
@@ -64,12 +64,12 @@
     </li>
     <li>) Assigning variables to represent individual ‘bits’ of a ‘byte’ can be confusing at best. 
         For example: the ‘byte’ A=(1,0,0,1,0,1,1,0) has 8-bits. 
-        <ol type=”a”>
+        <ol type="a">
             <li>) It is very common to use subscripts to represent each bit: eg A0 ,A1 ,A2 ,A3 ,A4 ,A5,A6 ,A7 where the first index = 0, however, the first index will often start with 1: eg  A1 ,A2 ,A3 ,A4 ,A5,A6 ,A7 ,A8 . You may want to try to have “everyone” use one or the other. No matter what you decide, the problem won’t go away entirely because ‘data sheets’ the Designer uses will contain both depending upon which 74LS-- IC they are dealing with. NOTE: In “Digital” you can create subscripts, A5 but NOT in “Fritzing”: A5.
             </li>
             <li>) The order of bits can make a difference: 
                     does (1, 0, 1, 0) == (0, 1, 0, 1) ? Possible! If one person orders the bits Right-to-Left and another person orders the bits Left-to-Right the answer is “YES” they are equal. 
-                <ol type=”i”>
+                <ol type="i">
                     <li>) It is customary to use the terms: “Most Significant Bit” (MSB) and “Least Significant Bit” (LSB) to make clear what order is intended. Eg (0, 1, 0, 1)LSB  or MSB(0, 1, 0, 1).
                                     </li>
                                     <li>) By convention, when the Byte is expressed horizontally, the bit on the right is the LSB.
