--- a/html/CEO/CEO_Packet.html
+++ b/html/CEO/CEO_Packet.html
@@ -1,52 +1,54 @@
 <div class="close-ceo-html" onclick="HTML_Manager.close()">Close</div>
-<label class="ceo-proposal-label"><span class="span-spacer">................................</span></span>CEO's Packet<br></label>
-<ol type="I">
-    <li>Responsibilities:
-        <ol type="A">
-            <li>To the Board of Directors:
-                <ol type="1">
-                    <li>Manage the Company and all its resources so that at the end of two months you have a fully functional, programmable 8-bit computer.</li>
-                    <li>Keep them informed of progress, problems etc.</li>
-                </ol>
-            </li>
-            <li>To your employees:       
-                <ol type="1">
-                    <li>Utilize them to the best of their abilities.</li>
-                    <li>Be responsive to their needs, questions, requests etc.</li>
-                    <li>Inform them of any disatisfaction you may have with regard to their work or behavior.</li>
-                </ol> 
-            </li>
-        </ol>
-    </li>
-    <li>Specifics:
-        <ol type="A">
-            <li> Appoint Managers to the following Departments:
-                <ol type="1">
-                    <li>Engineering Dept</li>
-                    <li>Drafting Dept</li>
-                    <li>Technician Dept</li>
-                    <li>Computer Dept</li>
-                    <li>Education/Media</li>
-                </ol>
-            </li>
-            <li> Meet with the Dept Managers: 
-                <ol type="1">
-                    <li>As soon as possible:
-                        <ol type="i">
-                            <li>to make sure they understand their responsibilities</li>
-                            <li>to answer any questions they may have</li>
-                        </ol>
-                    </li>
-                    <li>At least weekly
-                        <ol type="i">
-                            <li>to discuss, progress, problems etc.</li>
-                        </ol>
-                    </li>
-                </ol>
-            </li>
-            <li>Reasign personnel as needed
-            </li>
-        </ol>
-    </li>
-</ol>
+<div class="packet">
+    <label class="ceo-packet-label">CEO's Packet<br></label>
+    <ol type="I">
+        <li>Responsibilities:
+            <ol type="A">
+                <li>To the Board of Directors:
+                    <ol type="1">
+                        <li>Manage the Company and all its resources so that at the end of two months you have a fully functional, programmable 8-bit computer.</li>
+                        <li>Keep them informed of progress, problems etc.</li>
+                    </ol>
+                </li>
+                <li>To your employees:       
+                    <ol type="1">
+                        <li>Utilize them to the best of their abilities.</li>
+                        <li>Be responsive to their needs, questions, requests etc.</li>
+                        <li>Inform them of any disatisfaction you may have with regard to their work or behavior.</li>
+                    </ol> 
+                </li>
+            </ol>
+        </li>
+        <li>Specifics:
+            <ol type="A">
+                <li> Appoint Managers to the following Departments:
+                    <ol type="1">
+                        <li>Engineering Dept</li>
+                        <li>Drafting Dept</li>
+                        <li>Technician Dept</li>
+                        <li>Computer Dept</li>
+                        <li>Education/Media</li>
+                    </ol>
+                </li>
+                <li> Meet with the Dept Managers: 
+                    <ol type="1">
+                        <li>As soon as possible:
+                            <ol type="i">
+                                <li>to make sure they understand their responsibilities</li>
+                                <li>to answer any questions they may have</li>
+                            </ol>
+                        </li>
+                        <li>At least weekly
+                            <ol type="i">
+                                <li>to discuss, progress, problems etc.</li>
+                            </ol>
+                        </li>
+                    </ol>
+                </li>
+                <li>Reasign personnel as needed
+                </li>
+            </ol>
+        </li>
+    </ol>
+</div>
 
