--- a/html/CEO/Resources.html
+++ b/html/CEO/Resources.html
@@ -1,12 +1,13 @@
 <div class="close-ceo-html" onclick="HTML_Manager.close()">Close</div>
-<label class="ceo-proposal-label"><span class="span-spacer">................................</span></span>Resources<br></label>
-
-<ol type="I">
-    <li>URLs
-        <ol type="A">
-            <li>Libre Office Calc<br>https://www.youtube.com/watch?v=HdOLxR_NlrQ&list=PLB6667216F5948B34</li>
-            <li>Progress bar in Libreoffice Calc Spreadsheet<br>https://www.youtube.com/watch?v=_Td9cmCyQ_Y</li>
-        </ol>
-    </li>
-</ol>
+<div class="resource">
+    <label class="ceo-resource-label">Resources<br></label>
+    <ol type="I">
+        <li>URLs
+            <ol type="A">
+                <li>Libre Office Calc<br>https://www.youtube.com/watch?v=HdOLxR_NlrQ&list=PLB6667216F5948B34</li>
+                <li>Progress bar in Libreoffice Calc Spreadsheet<br>https://www.youtube.com/watch?v=_Td9cmCyQ_Y</li>
+            </ol>
+        </li>
+    </ol>
+</div>
 
