--- a/html/CEO/Proposal.html
+++ b/html/CEO/Proposal.html
@@ -1,27 +1,27 @@
 <div class="close-ceo-html" onclick="HTML_Manager.close()">Close</div>
-<label class="ceo-proposal-label"><span class="span-spacer">................................</span></span>Proposal<br></label>
-<label class="a-little-history-label">I) A Little History</label>
+<label class="ceo-proposal-label">Proposal<br></label>
+<label class="a-little-history-label">I. A Little History</label>
 <div class="a-little-history">
-    <p class="text-1-a">A) In 1971 Texas Instruments(TI) introduced the 74LS__ series of Integrated Circuits(ICs).
+    <p class="text-1-a">A. In 1971 Texas Instruments(TI) introduced the 74LS__ series of Integrated Circuits(ICs).
     </p>
     <img class="img-1-b" src="media/imgs/74LS_series_ICs.png">
-    <p class="text-2-a">B) In 1975 MOS Technology introduced the 6502 8-bit microprocessor.
+    <p class="text-2-a">B. In 1975 MOS Technology introduced the 6502 8-bit microprocessor.
     </p>
     <img class="img-2-b" src="media/imgs/6502_IC.png">
     <label class="credits-2-c">https://commons.wikimedia.org/w/index.php?curid=91538</label> 
-    <p class="text-3-a">C) In 1977 Companies like Apple, Radio Shack, Commodore introduced the first Personal Computers. The magazine Byte introduced them as:<br>"1977 trinity": Commodore PET, Apple II, and TRS-80 Model I</p>
+    <p class="text-3-a">C. In 1977, based on these two technologies, Companies like Apple, Radio Shack, Commodore introduced the first Personal Computers. The magazine Byte introduced them as:<br>"1977 trinity": Commodore PET, Apple II, and TRS-80 Model I</p>
     <img class="img-4-a" src="media/imgs/PET_AppleII_TRS-80.jpg">
     <label class="credits-5-a">https://commons.wikimedia.org/w/index.php?curid=144826526</label>
 </div>
 <div class="proposal">
-    <label class="proposal-label">II) Proposal:</label>
+    <label>II. Proposal:</label>
     <ol type="A"> 
         <li>Form a Company that will:
             <ol type="1">
                 <li>Simulate Commodore, Apple and Radio Shack</li>
                 <li>Design and Build an 8-bit Computer from the 74LS__ series of Integrated Circuits(ICs).</li> 
                 <li>NOTE: This predates 1975 so this 8-bit Computer will not have the capabilities
-                of say the Apple II, TRS-80, or PET; however, the fundamental operations of the computer will be very similar.</li>
+                of the Apple II, TRS-80, or PET; however, the fundamental operations of the computer will be very similar.</li>
             </ol>
         </li><br>
         <li>Structure of the Company:
@@ -38,48 +38,95 @@
                 </li>
             </ol>
         </li><br>
-        <li>Personnel:
+        <li>Who:
             <ol type="1">
-                <li>Six Students from Chesterton Academy High School in Albuquerque, NM</li>
-                <li>Six Students from other Chesterton Academy High Schools</li>
-                <li>The students will work in pairs: one person from NM and one from outside NM</li>
-            </ol> 
+                <li>For Summer of 2025
+                    <ol type="a">
+                        <li>Six Students from Chesterton Academy High School in Albuquerque, NM</li>           
+                    </ol>
+                </li>
+                <li>For Summer of 2026
+                    <ol type="a">
+                        <li>Six Students from Chesterton Academy High School in Albuquerque, NM</li>
+                        <li>Six Students from Chesterton Academy High Schools not located in Albuquerque, NM</li>
+                        <li>I like this option. It would be a nice connection between the Chesterton Academy Schools</li>
+                    </ol>
+                </li>
+                <li>For Summer of 2027 and successive summers
+                    <ol type="a">
+                        <li>Six Students from Chesterton Academy High School in Albuquerque, NM</li>
+                        <li>Six Students from Chesterton Academy High Schools not located in Albuquerque, NM</li>
+                        <li>Six Students from Eagle Butte High School in Eagle Butte, SD</li>
+                        <li>Six Students from either Red Cloud High School or Pine Ridge High School located in Pine Ridge, SD</li>
+                        <li>Without a doubt this is where my heart is! It would be a beautiful exercise in reconcillation
+                            between Native and Non-Native Americans. It would help, especially the Native Americans, regain something they lost when they were forced on the Reservation: 'A good work ethic'.
+                        </li>
+                    </ol>
+                </li>
+            </ol>
         </li><br>
         <li>When:
             <ol type="1">
                 <li>June 3 to Aug 1, 2025</li>
+                <li>June-July, for 2026, 2027 and following years!</li>
             </ol>
         </li><br>
         <li>Where:
             <ol type="1">
-                <li>Queen of Heaven Parish, Albuquerque, NM</li>
+                <li>For 2025, Queen of Heaven Parish, Albuquerque, NM</li>
+                <li>For 2026, 2027 . . . . Cheyenne River Youth Project, Eagle Butte, SD</li>
+                <li>Another option would be to rotate between NM and SD, which would require housing of the Native Americans here in Albuquerque. 
+                    One of the advantages would be to help the Native Americans in adjusting to a life outside the Reservation.</li>
             </ol>
         </li><br>
-        <li>General Time Frame:
+        <li>General Time Framework:
             <ol type="1">
                 <li>Week 1 (June 1-7)
                     <ol type="a">
                         <li>Orientation (get to know each other)</li>
-                        <li>Introduction to the overall project
+                        <li>Sample Project: BCD to 7-Segment Decoder. The Goal of this Sample Project is to prepare everyone in every aspect of the Design, Draft & Build phases of the main Project.
                             <ol type="i">
-                                <li>Hardware Architecture (see Appendix A in Computer Dept Resources.)</li>
-                                <li>Software Architecture also know as “Instruction Set Architecture”(ISA) (see Appendix B in Computer Dept Resources.)</li>
-                            </ol>
-                        </li>
-                        <li>Sample Project: BCD to 7-Segment Decoder (see "Sample Project" in Engineering, Drafting, & Technician Departments)
-                            <ol type="i">
-                                <li>Introduction to Binary #s, the 7-Segment Display and the 74LS47/48 IC Data Sheet.</li>
-                                <li>Each person will work indivually on all three phases: Engineering, Drafting and Building phases.</li>
-                                <li>They are free to ask others for help.</li>
+                                <li>Step 1: Design Phase (available tutorials in the Education Dept) 
+                                    <ol>
+                                        <li>Intro to 'Digital'</li>
+                                        <li>Testing in 'Digital'</li>
+                                    </ol>
+                                </li>
+                                <li>Step 2: Drafting Phase (available tutorials)
+                                    <ol>
+                                        <li>Intro to 'Fritzing'</li>
+                                        <li>Intro to 'Breadboards'</li>
+                                    </ol>
+                                </li>
+                                <li>Step 3: Building Phase (available tutorials)
+                                    <ol>
+                                        <li>Intro to Basic Electronics</li>
+                                        <li>Intro to Multimeters (Oscilloscopes optional - only for more advanced students)</li>
+                                        <li>Working with 74LS_series_ICs</li>
+                                        <li>Intro to 'Breadboards'</li>
+                                    </ol>
+                                </li>    
+                                <li>It is expected that, although they are working on this project individually,
+                                    when anyone finds themselves completely stumpted, all others should be readily available to come to their assistance.
+                                    Only when everyone is at wits' end can they ask for assistance from the 'Consultant Group'.
+                                </li>
+                                <li>NOTE: Education today seems to put a strong emphasis on 'Collaboration'. 
+                                    This whole project will require 'Collaboration' from the 1st day to the last.</li>
                             </ol>
                         </li>
                         <li>Company Assignments:
                             <ol type="i">
                                 <li>Select the pair to be "CEO"</li>
-                                <li>The CEO will then have the responsibility of assigning the five(5) other Department Managers: Engineering, Drafting, Technician, Computer, Education/Media</li>
+                                <li>The CEO will then have the responsibility of assigning Managers to the five(5) Departments: Engineering, Drafting, Technician, Computer, Education/Media</li>
                                 <li>The CEO is free to make changes as time seems fit.</li>
-                                <li>???? Does the CEO have the authority to fire someone?</li>
-                                <li>???? Should there be a Board of Directors, which would have the authority to fire or replace the CEO?</li>
+                                <li>The CEO should have the authority to fire someone!!!!????</li>
+                                <li>There should be a Board of Directors, which would have the authority to fire or replace the CEO!</li>
+                            </ol>
+                        </li>
+                        <li>Introduction to the overall project
+                            <ol type="i">
+                                <li>Hardware Architecture (See Education Dept Resources.)</li>
+                                <li>Software Architecture also know as “Instruction Set Architecture”(ISA) (See Education Dept Resources.)</li>
                             </ol>
                         </li>
                         <li>Set up a daily time frame:</li>
@@ -89,9 +136,9 @@
                                 <li>What time does the work day end?</li>
                                 <li>What about some “play time” at the end of the day?</li>
                                 <li>What about a service project?</li>
-                                <li>What about a company day off, say, for a hiking trip in the Sandias? Maybe this could occur towards the end.</li>
+                                <li>What about a Company day off, say, for a hiking trip? Maybe this could occur towards the end.</li>
                             </ol>
-                        <li>Each Manager(pair) should go over the contents of the Manager's Packet, which is located on the respective page of the website.</li>
+                        <li>Each Manager(pair) should go over the contents of the Manager's Packet, which is located in the Department's respective page on the website.</li>
                         <li>Begin work on 8-bit Computer Project</li>
                     </ol>
                 <li>Week 2 (June 8-14)</li>
@@ -114,6 +161,13 @@
                 </li>
                 <li>Aug 3: Presentation
                 </li>
+            </ol>
+        </li>
+        <li>Pay:
+            <ol>
+                <li>"A worker deserves their wages" 1 Tim 5:18</li>
+                <li>It is difficult to expect a person to appreaciate a 'Good Work Ethic' when they are expected to work hard but NOT get payed!</li>
+                <li>Salary: $500/person (eg $250/month/person)</li>
             </ol>
         </li>
     </ol>
